# XYZT-Paradigm

./: .gitignore  ARCHIVE_INDEX.md  CODEBOOK.md  LICENSE  NOTICE  PLAN.md  README.md  THE_RECORD.md  agent_memory_test.c  demo_anomaly.c  hw.h  onetwo.c  telemetry.h  test_sense.c  use_adversarial_v3.c  use_engine_v3.h  use_real_v3.c  use_v3.c  v6_core.h  xyzt.c  xyzt_v5.c
pc/: Makefile  PAPER.md  SESSION_HANDOFF.md  STATUS.md  TESTS.md  WHAT_I_FOUND.md  WHY_THIS_WORKS.md  build.bat  build_daemon.bat  build_gateway.bat  build_test.bat  build_tline_math.bat  build_yee.bat  cortex.c  cortex.h  daemon.cu  decay_sweep_results.tsv  engine.c  engine.h  infer.c  infer.h  io.c  io.h  main.cu  onetwo.c  onetwo.h  rebuild.bat  reporter.c  run_decay_sweep.py  run_sweep.py  sense.c  sense.h  sonify.c  sonify.h  substrate.cu  substrate.cuh  sweep_137.py  sweep_tracking.c  tline.c  tline.h  (+7 more)
pc/archive/: test_gpu.cu
pc/bare/: loader.c  yee_cpu.c  yee_cpu.h
pc/proofs/: FORMAL_MODEL.md  THE_SEED.md  XYZT_Proof_Contraction.lean  XYZT_Proof_Isolation.lean  XYZT_Proof_SymmetryBreak.lean  XYZT_Proof_TuringComplete.lean
pc/tests/: test.h  test_babble.c  test_child_conflict.c  test_child_divergence.c  test_collision.c  test_core.c  test_gpu.cu  (+23 more)
pi-zero2/: Makefile  boot.S  config.txt  drivers.c  hw.h  kernel.c  link.ld  onetwo.c  wire.c  xyzt_os.h
pico/: CMakeLists.txt  PICO_INTEGRATION.c  bin2uf2.py  hw.h  main.c  pico_cmd.ps1  pio_adapt.h  sampler.pio  sense.c  tap_listener.py  telemetry.h  test_pio_sense.c  test_sense.c  wire.h  xyzt_engine.h
pico/tests/: test_pio_sense.c
shared/: sense.c
(+64 files in other folders)
